<resources>
    <string name="app_name">Smart Posture</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">I agree to all the terms and conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="dash">Dashboard</string>

    <string name="title1">Step 1 of 3</string>
    <string name="title2">Step 2 of 3</string>
    <string name="title3">Step 3 of 3</string>
    <string name="description1"> Get Yourself Register.</string>
    <string name="description2"> Lets start using your device.First press the power button.</string>
    <string name="description3"> Attach the device vertically on your upper back to any spot you can
        comfortably reach.Either side can be facing up.</string>

    <string name="Back">Back</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>