<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white_greyish"
    android:padding="20dp">

    <TextView
        android:id="@+id/registration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_emailid"
        android:textColor="#2B304C"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/registered_emailid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@null"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#2B304C"
        android:textColorHint="#2B304C"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#2B304C"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/white_greyish"
            android:textSize="15sp"
            android:textStyle="bold"
            app:backgroundTint="#2B304C"
            android:onClick="BackToLogin"/>

        <Button
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@color/white_greyish"
            app:backgroundTint="#2B304C"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />
    </RelativeLayout>

</LinearLayout>

