<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white_greyish"
    tools:context=".ThirdFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/dev2"
        android:layout_gravity="center"

        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="374dp"
        android:layout_height="63dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/title3"
        android:textColor="#2B304C"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />


    <androidx.cardview.widget.CardView
        android:layout_width="363dp"
        android:layout_height="131dp"
        android:paddingLeft="50dp"
        android:background="@color/white_greyish"
        android:backgroundTint="#2B304C">

        <TextView
            android:id="@+id/text2"
            android:layout_width="321dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/description3"
            android:textColor="@color/white_greyish"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="17sp"
            android:textStyle="italic" />



    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Back"
            android:textColor="#2B304C"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done"
            android:textSize="20sp"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#2B304C"
            android:clickable="true"
            android:focusable="true"/>




    </LinearLayout>








</LinearLayout>