<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/white_greyish"
    tools:context=".FirstFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="INSTRUCTIONS"
        android:textAlignment="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="213dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        android:src="@drawable/ic_reg" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="374dp"
        android:layout_height="63dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/title1"
        android:textColor="#2B304C"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />


    <androidx.cardview.widget.CardView
        android:layout_width="363dp"
        android:layout_height="131dp"
        android:paddingLeft="50dp"
        android:background="@color/white_greyish"
        android:backgroundTint="#2B304C">

        <TextView
            android:id="@+id/text2"
            android:layout_width="323dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/description1"
            android:textColor="@color/white_greyish"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="17sp"
            android:textStyle="italic" />



    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="125dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/next1"
            android:layout_width="350dp"
            android:layout_height="47dp"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textColor="#2B304C"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>